Add simple integration tests and update example

--- a/examples/energy-and-gradient.ipynb
+++ b/examples/energy-and-gradient.ipynb
@@ -3,11 +3,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Training Against QM Energies\n",
+    "# Training Against QM Energies and Gradients\n",
     "\n",
     "This notebook aims to show how the [`descent`](https://github.com/SimonBoothroyd/descent) framework in combination with\n",
     "[`smirnoffee`](https://github.com/SimonBoothroyd/smirnoffee) can be used to train a set of SMIRNOFF force field bond and\n",
-    "angle force constant parameters against the QM derived relative energies of a small molecule in multiple conformers.\n",
+    "angle force constant parameters against the QM computed energies and associated gradients of a small molecule in\n",
+    "multiple conformers.\n",
     "\n",
     "For the sake of clarity all warning will be disabled:"
    ],
@@ -56,7 +57,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n"
+     ]
+    }
+   ],
    "source": [
     "from qcportal import FractalClient\n",
     "\n",
@@ -89,14 +98,16 @@
   {
    "cell_type": "code",
    "source": [
-    "from openff.qcsubmit.results.filters import SMILESFilter\n",
+    "from openff.qcsubmit.results.filters import ConformerRMSDFilter, SMILESFilter\n",
     "\n",
     "result_collection = result_collection.filter(\n",
-    "    SMILESFilter(smiles_to_include=[\"CC(=O)NCC1=NC=CN1C\"])\n",
+    "    SMILESFilter(smiles_to_include=[\"CC(=O)NCC1=NC=CN1C\"]),\n",
+    "    # Only retain conformers with an RMSD greater than 0.5 Å.\n",
+    "    ConformerRMSDFilter(max_conformers=10, rmsd_tolerance=0.5)\n",
     ")\n",
     "\n",
-    "print(f\"N Molecules: {result_collection.n_molecules}\")\n",
-    "print(f\"N Molecules: {result_collection.n_results}\")"
+    "print(f\"N Molecules:  {result_collection.n_molecules}\")\n",
+    "print(f\"N Conformers: {result_collection.n_results}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -110,8 +121,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N Molecules: 1\n",
-      "N Molecules: 6\n"
+      "N Molecules:  1\n",
+      "N Conformers: 3\n"
      ]
     }
    ]
@@ -122,19 +133,16 @@
     "You should see that our filtered collection contains the 6 results, which corresponds to 6 minimized conformers (and\n",
     "their associated energy computed using the OpenFF default B3LYP-D3BJ spec) for the molecule we filtered for above.\n",
     "\n",
-    "### Defining the Objective ( / loss) function\n",
+    "### Defining the objective ( / loss) function\n",
     "\n",
-    "For this example we will be training our force field parameters against the relative energies between the conformers we\n",
-    "retrieved above. In particular, we will use the following L2 loss function:\n",
+    "For this example we will be training our force field parameters against:\n",
     "\n",
-    "$$L2\\left(\\Delta\\theta\\right) = \\dfrac{2}{N\\left(N - 1 \\right )}\\sum ^N _{i=1} \\sum ^N_{j = i+i} \\left[ \\left(E_{QM,i}-E_{QM,j}\\right) - \\left(E_{MM,i}\\left(\\theta + \\Delta\\theta \\right) - E_{MM,j}\\left(\\theta + \\Delta\\theta \\right) \\right) \\right ]^2$$\n",
+    "* the relative energies between each conformer with the first conformer of the molecule\n",
+    "* the deviations between the QM and MM gradients projected along the redundant internal coordinates (RIC) of\n",
+    "  the molecule.\n",
     "\n",
-    "where N is the number of conformers of our given molecule, $E_{QM,i}$ the QM computed energy of conformer $i$,\n",
-    "$E_{MM,i}$ the MM energy of conformer $i$, $\\theta$ the initial force field parameters, and $\\Delta\\theta$ the\n",
-    "delta term that is being trained and added to the original force field parameters.\n",
-    "\n",
-    "This loss function is directly encoded into ``descent`` through the ``RelativeEnergyObjective`` object which can be\n",
-    "created directly from the collection of optimization results we retrieved above.\n",
+    "The construction of such a loss function is made trivial using the built-in ``EnergyObjective`` class which can be\n",
+    "created directly from the collection of optimization results we retrieved above:\n",
     "\n",
     "We first load in the initial force field parameters ($\\theta$) using the [OpenFF Toolkit](https://github.com/openforcefield/openff-toolkit):"
    ],
@@ -174,10 +182,29 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "from descent.objectives.energy import RelativeEnergyObjective\n",
+    "from descent import metrics, transforms\n",
+    "from descent.objectives.energy import EnergyObjective\n",
     "\n",
-    "objective_contributions = RelativeEnergyObjective.from_optimization_results(\n",
-    "    result_collection, initial_force_field, include_gradients=False\n",
+    "objective_contributions = EnergyObjective.from_optimization_results(\n",
+    "    result_collection,\n",
+    "    initial_force_field,\n",
+    "    # State that we want to include energies and gradients when computing\n",
+    "    # the contribution to the loss function.\n",
+    "    include_energies=True,\n",
+    "    include_gradients=True,\n",
+    "    # Specify that we want use energies relative to the first conformer\n",
+    "    # when evaluating the loss function\n",
+    "    energy_transforms=transforms.relative(index=0),\n",
+    "    # Use the built-in MSE metric when comparing the MM and QM relative\n",
+    "    # energies.\n",
+    "    energy_metric=metrics.mse(),\n",
+    "    # For this example with will use the QM and MM gradients directly when\n",
+    "    # computing the loss function.\n",
+    "    gradient_transforms=transforms.identity(),\n",
+    "    # Use the built-in MSE metric when comparing the MM and QM gradients\n",
+    "    gradient_metric=metrics.mse(),\n",
+    "    # State that we want to project the gradients along the RICs\n",
+    "    gradient_coordinate_system=\"ric\"\n",
     ")"
    ],
    "metadata": {
@@ -227,7 +254,7 @@
    "cell_type": "markdown",
    "source": [
     "as we filtered our initial result collection to only contain a single molecule, so too do we only have a single\n",
-    "contribution object.\n",
+    "contribution.\n",
     "\n",
     "### Specifying the parameters to train\n",
     "\n",
@@ -251,7 +278,7 @@
     "        (handler_type, potential_key, attribute)\n",
     "        for contribution in objective_contributions\n",
     "        for handler_type, potential_key, attribute in contribution.parameter_ids\n",
-    "        if attribute in \"k\" and handler_type in [\"Bonds\", \"Angles\"]\n",
+    "        if handler_type in [\"Bonds\", \"Angles\"] and attribute == \"k\"\n",
     "    },\n",
     "    key=lambda x: x[0],\n",
     "    reverse=True\n",
@@ -267,7 +294,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "where here we have made use of the ``RelativeEnergyObjective.parameter_ids`` which contains the unique identifiers of\n",
+    "where here we have made use of the ``parameter_ids`` property that contains the unique identifiers of\n",
     "the parameters that were assigned to the molecule referenced by the object."
    ],
    "metadata": {
@@ -283,7 +310,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[('Bonds', PotentialKey(id='[#6:1]=[#8X1+0,#8X2+1:2]', mult=None), 'k'),\n ('Bonds', PotentialKey(id='[#6X3:1]=[#6X3:2]', mult=None), 'k')]"
+      "text/plain": "[('Bonds',\n  PotentialKey(id='[#6X3:1](=[#8X1+0])-[#7X3:2]', mult=None, associated_handler='Bonds'),\n  'k'),\n ('Bonds',\n  PotentialKey(id='[#6X3:1]=[#6X3:2]', mult=None, associated_handler='Bonds'),\n  'k')]"
      },
      "execution_count": 8,
      "metadata": {},
@@ -342,7 +369,7 @@
     "We are finally ready to begin training our force field parameters, or more precisely, the delta value that\n",
     "we should perturb the force field parameters by to reach better agreement with the training data.\n",
     "\n",
-    "Here we will use the 'boilerplate Pytorch optimization loop':"
+    "Here we will use the 'boilerplate `pytorch` optimization loop':"
    ],
    "metadata": {
     "collapsed": false,
@@ -359,21 +386,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: loss=0.10203274339437485\n",
-      "Epoch 20: loss=0.037074923515319824\n",
-      "Epoch 40: loss=0.0014350797282531857\n",
-      "Epoch 60: loss=0.0023795373272150755\n",
-      "Epoch 80: loss=0.001053333398886025\n",
-      "Epoch 100: loss=0.0008100062841549516\n",
-      "Epoch 120: loss=0.0007415462168864906\n",
-      "Epoch 140: loss=0.0006738712545484304\n",
-      "Epoch 160: loss=0.0006102666957303882\n",
-      "Epoch 180: loss=0.0005511701456271112\n"
+      "Epoch 0: loss=541.970458984375\n",
+      "Epoch 20: loss=316.5989990234375\n",
+      "Epoch 40: loss=302.3933410644531\n",
+      "Epoch 60: loss=298.25592041015625\n",
+      "Epoch 80: loss=296.67816162109375\n",
+      "Epoch 100: loss=296.056396484375\n",
+      "Epoch 120: loss=295.83831787109375\n",
+      "Epoch 140: loss=295.7755126953125\n",
+      "Epoch 160: loss=295.7544250488281\n",
+      "Epoch 180: loss=295.7417297363281\n"
      ]
     }
    ],
    "source": [
-    "lr = 0.1\n",
+    "lr = 0.01\n",
     "n_epochs = 200\n",
     "\n",
     "optimizer = torch.optim.Adam([parameter_delta], lr=lr)\n",
@@ -426,6 +453,70 @@
     "    initial_force_field, parameter_delta, parameter_delta_ids\n",
     ")\n",
     "final_force_field.to_file(\"final.offxml\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "or print out the initial and final values."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bonds SMIRKS=[#6X3:1](=[#8X1+0])-[#7X3:2] ATTR=k  INITIAL=1053.970761594 kcal/(A**2 mol)  FINAL=1053.4928565952225 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]=[#6X3:2] ATTR=k  INITIAL=857.1115548611 kcal/(A**2 mol)  FINAL=856.6519475195506 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#1:2] ATTR=k  INITIAL=758.0931772913 kcal/(A**2 mol)  FINAL=757.615259442764 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]-[#7X2:2] ATTR=k  INITIAL=837.2647972972 kcal/(A**2 mol)  FINAL=837.5914970507644 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#6X3:2]=[#8X1+0] ATTR=k  INITIAL=612.0537081219 kcal/(A**2 mol)  FINAL=612.5316650040704 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#7:1]-[#1:2] ATTR=k  INITIAL=997.7547006218 kcal/(A**2 mol)  FINAL=997.2765224160728 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]-[#1:2] ATTR=k  INITIAL=808.1394472833 kcal/(A**2 mol)  FINAL=807.6614951022607 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#6X3:2] ATTR=k  INITIAL=612.5097961064 kcal/(A**2 mol)  FINAL=612.0317996492527 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]=[#7X2,#7X3+1:2] ATTR=k  INITIAL=882.4191878243 kcal/(A**2 mol)  FINAL=881.9175979284098 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6:1]=[#8X1+0,#8X2+1:2] ATTR=k  INITIAL=1135.595318618 kcal/(A**2 mol)  FINAL=1135.1173281726021 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]-[#7X3:2] ATTR=k  INITIAL=719.219372554 kcal/(A**2 mol)  FINAL=718.7519367178918 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#7X3:2]-[#6X3]=[#8X1+0] ATTR=k  INITIAL=764.7120801727 kcal/(A**2 mol)  FINAL=765.1674802297943 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6:1]-[#7:2] ATTR=k  INITIAL=719.6326854584 kcal/(A**2 mol)  FINAL=719.1547122789749 kcal/(A**2 mol)\n",
+      "Angles SMIRKS=[*:1]~[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]~[*:3] ATTR=k  INITIAL=112.545110149 kcal/(mol rad**2)  FINAL=102.37503371799185 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[#1:1]-[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]-[*:3] ATTR=k  INITIAL=77.52610202633 kcal/(mol rad**2)  FINAL=174.6601460485996 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~;!@[*;X3;r5:2]~;@[*;r5:3] ATTR=k  INITIAL=70.66802196994 kcal/(mol rad**2)  FINAL=-10.563765656763124 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~[#6X3:2]~[*:3] ATTR=k  INITIAL=153.5899485526 kcal/(mol rad**2)  FINAL=55.08452155057894 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~[#7X2+0:2]~[*:3] ATTR=k  INITIAL=226.9001499199 kcal/(mol rad**2)  FINAL=43.02593513271265 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[#1:1]-[#6X4:2]-[#1:3] ATTR=k  INITIAL=74.28701527177 kcal/(mol rad**2)  FINAL=3.6682715114174442 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~[#6X4:2]-[*:3] ATTR=k  INITIAL=101.7373362367 kcal/(mol rad**2)  FINAL=25.96669771106467 kcal/(mol rad**2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for parameter_handler, potential_key, attribute in parameter_delta_ids:\n",
+    "\n",
+    "    initial_value = getattr(\n",
+    "        initial_force_field[parameter_handler].parameters[potential_key.id], attribute\n",
+    "    )\n",
+    "    final_value = getattr(\n",
+    "        final_force_field[parameter_handler].parameters[potential_key.id], attribute\n",
+    "    )\n",
+    "\n",
+    "    print(\n",
+    "        f\"{parameter_handler} SMIRKS={potential_key.id} ATTR={attribute}  INITIAL={initial_value}  FINAL={final_value}\"\n",
+    "    )"
    ],
    "metadata": {
     "collapsed": false,
