--- a/examples/energy-and-gradient.ipynb
+++ b/examples/energy-and-gradient.ipynb
@@ -256,10 +256,9 @@
     "as we filtered our initial result collection to only contain a single molecule, so too do we only have a single\n",
     "contribution.\n",
     "\n",
-    "### Specifying the parameters to train\n",
+    "### Defining the 'model'\n",
     "\n",
-    "For this example will will train all of the bond and force constants that were assigned to our molecule\n",
-    "of interest:"
+    "For this example we will train all the bond and force constants that were assigned to our molecule of interest:"
    ],
    "metadata": {
     "collapsed": false,
@@ -310,7 +309,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[('Bonds',\n  PotentialKey(id='[#6X3:1](=[#8X1+0])-[#7X3:2]', mult=None, associated_handler='Bonds'),\n  'k'),\n ('Bonds',\n  PotentialKey(id='[#6X3:1]=[#6X3:2]', mult=None, associated_handler='Bonds'),\n  'k')]"
+      "text/plain": "[('Bonds',\n  PotentialKey(id='[#6X3:1]-[#7X3:2]', mult=None, associated_handler='Bonds'),\n  'k'),\n ('Bonds',\n  PotentialKey(id='[#6X3:1]-[#7X2:2]', mult=None, associated_handler='Bonds'),\n  'k')]"
      },
      "execution_count": 8,
      "metadata": {},
@@ -330,11 +329,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "These ids are comprised of the type of SMIRNOFF parameter handler that the parameter originated from,\n",
+    "These 'ids' are comprised of the type of SMIRNOFF parameter handler that the parameter originated from,\n",
     "a key containing the id (in this case the SMIRKS pattern) associated with the parameter and the specific\n",
     "attribute of the parameter (e.g. the force constant ``k``).\n",
     "\n",
-    "These keys will allow us to map our tensor of delta values:"
+    "These keys will allow us to define the 'model' that will take an already parameterised system stored in an\n",
+    "``Interchange`` object and perturb the parameters based on the current values of the parameters being trained:"
    ],
    "metadata": {
     "collapsed": false,
@@ -348,9 +348,9 @@
    "execution_count": 9,
    "outputs": [],
    "source": [
-    "import torch\n",
+    "from descent.models.smirnoff import SMIRNOFFModel\n",
     "\n",
-    "parameter_delta = torch.zeros(len(parameter_delta_ids), requires_grad=True)"
+    "model = SMIRNOFFModel(parameter_delta_ids, initial_force_field)"
    ],
    "metadata": {
     "collapsed": false,
@@ -387,30 +387,32 @@
      "output_type": "stream",
      "text": [
       "Epoch 0: loss=541.970458984375\n",
-      "Epoch 20: loss=316.5989990234375\n",
+      "Epoch 20: loss=316.5990295410156\n",
       "Epoch 40: loss=302.3933410644531\n",
-      "Epoch 60: loss=298.25592041015625\n",
-      "Epoch 80: loss=296.67816162109375\n",
-      "Epoch 100: loss=296.056396484375\n",
-      "Epoch 120: loss=295.83831787109375\n",
+      "Epoch 60: loss=298.2558288574219\n",
+      "Epoch 80: loss=296.6781921386719\n",
+      "Epoch 100: loss=296.0563659667969\n",
+      "Epoch 120: loss=295.8383483886719\n",
       "Epoch 140: loss=295.7755126953125\n",
       "Epoch 160: loss=295.7544250488281\n",
-      "Epoch 180: loss=295.7417297363281\n"
+      "Epoch 180: loss=295.7417907714844\n"
      ]
     }
    ],
    "source": [
+    "import torch\n",
+    "\n",
     "lr = 0.01\n",
     "n_epochs = 200\n",
     "\n",
-    "optimizer = torch.optim.Adam([parameter_delta], lr=lr)\n",
+    "optimizer = torch.optim.Adam([model.parameter_delta], lr=lr)\n",
     "\n",
     "for epoch in range(n_epochs):\n",
     "\n",
     "    loss = torch.zeros(1)\n",
     "\n",
     "    for objective_contribution in objective_contributions:\n",
-    "        loss += objective_contribution(parameter_delta, parameter_delta_ids)\n",
+    "        loss += objective_contribution(model)\n",
     "\n",
     "    loss.backward()\n",
     "\n",
@@ -447,11 +449,7 @@
    "execution_count": 11,
    "outputs": [],
    "source": [
-    "from descent.utilities.smirnoff import perturb_force_field\n",
-    "\n",
-    "final_force_field = perturb_force_field(\n",
-    "    initial_force_field, parameter_delta, parameter_delta_ids\n",
-    ")\n",
+    "final_force_field = model.to_force_field()\n",
     "final_force_field.to_file(\"final.offxml\")"
    ],
    "metadata": {
@@ -481,26 +479,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bonds SMIRKS=[#6X3:1](=[#8X1+0])-[#7X3:2] ATTR=k  INITIAL=1053.970761594 kcal/(A**2 mol)  FINAL=1053.4928565952225 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]=[#6X3:2] ATTR=k  INITIAL=857.1115548611 kcal/(A**2 mol)  FINAL=856.6519475195506 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#1:2] ATTR=k  INITIAL=758.0931772913 kcal/(A**2 mol)  FINAL=757.615259442764 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]-[#7X3:2] ATTR=k  INITIAL=719.219372554 kcal/(A**2 mol)  FINAL=718.7519367748752 kcal/(A**2 mol)\n",
       "Bonds SMIRKS=[#6X3:1]-[#7X2:2] ATTR=k  INITIAL=837.2647972972 kcal/(A**2 mol)  FINAL=837.5914970507644 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#6X3:2]=[#8X1+0] ATTR=k  INITIAL=612.0537081219 kcal/(A**2 mol)  FINAL=612.5316650040704 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#7:1]-[#1:2] ATTR=k  INITIAL=997.7547006218 kcal/(A**2 mol)  FINAL=997.2765224160728 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]-[#1:2] ATTR=k  INITIAL=808.1394472833 kcal/(A**2 mol)  FINAL=807.6614951022607 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#6X3:2] ATTR=k  INITIAL=612.5097961064 kcal/(A**2 mol)  FINAL=612.0317996492527 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]=[#7X2,#7X3+1:2] ATTR=k  INITIAL=882.4191878243 kcal/(A**2 mol)  FINAL=881.9175979284098 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6:1]=[#8X1+0,#8X2+1:2] ATTR=k  INITIAL=1135.595318618 kcal/(A**2 mol)  FINAL=1135.1173281726021 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]-[#7X3:2] ATTR=k  INITIAL=719.219372554 kcal/(A**2 mol)  FINAL=718.7519367178918 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#7X3:2]-[#6X3]=[#8X1+0] ATTR=k  INITIAL=764.7120801727 kcal/(A**2 mol)  FINAL=765.1674802297943 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6:1]-[#7:2] ATTR=k  INITIAL=719.6326854584 kcal/(A**2 mol)  FINAL=719.1547122789749 kcal/(A**2 mol)\n",
-      "Angles SMIRKS=[*:1]~[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]~[*:3] ATTR=k  INITIAL=112.545110149 kcal/(mol rad**2)  FINAL=102.37503371799185 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[#1:1]-[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]-[*:3] ATTR=k  INITIAL=77.52610202633 kcal/(mol rad**2)  FINAL=174.6601460485996 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~;!@[*;X3;r5:2]~;@[*;r5:3] ATTR=k  INITIAL=70.66802196994 kcal/(mol rad**2)  FINAL=-10.563765656763124 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~[#6X3:2]~[*:3] ATTR=k  INITIAL=153.5899485526 kcal/(mol rad**2)  FINAL=55.08452155057894 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~[#7X2+0:2]~[*:3] ATTR=k  INITIAL=226.9001499199 kcal/(mol rad**2)  FINAL=43.02593513271265 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[#1:1]-[#6X4:2]-[#1:3] ATTR=k  INITIAL=74.28701527177 kcal/(mol rad**2)  FINAL=3.6682715114174442 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~[#6X4:2]-[*:3] ATTR=k  INITIAL=101.7373362367 kcal/(mol rad**2)  FINAL=25.96669771106467 kcal/(mol rad**2)\n"
+      "Bonds SMIRKS=[#7:1]-[#1:2] ATTR=k  INITIAL=997.7547006218 kcal/(A**2 mol)  FINAL=997.2765223590894 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#7X3:2]-[#6X3]=[#8X1+0] ATTR=k  INITIAL=764.7120801727 kcal/(A**2 mol)  FINAL=765.1674806286782 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#1:2] ATTR=k  INITIAL=758.0931772913 kcal/(A**2 mol)  FINAL=757.615259442764 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#6X3:2] ATTR=k  INITIAL=612.5097961064 kcal/(A**2 mol)  FINAL=612.0317997062361 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]=[#7X2,#7X3+1:2] ATTR=k  INITIAL=882.4191878243 kcal/(A**2 mol)  FINAL=881.9175979853932 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6:1]=[#8X1+0,#8X2+1:2] ATTR=k  INITIAL=1135.595318618 kcal/(A**2 mol)  FINAL=1135.1173281441104 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1](=[#8X1+0])-[#7X3:2] ATTR=k  INITIAL=1053.970761594 kcal/(A**2 mol)  FINAL=1053.4928565952225 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6:1]-[#7:2] ATTR=k  INITIAL=719.6326854584 kcal/(A**2 mol)  FINAL=719.1547123359583 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]-[#1:2] ATTR=k  INITIAL=808.1394472833 kcal/(A**2 mol)  FINAL=807.6614951877358 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]=[#6X3:2] ATTR=k  INITIAL=857.1115548611 kcal/(A**2 mol)  FINAL=856.6519474625673 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#6X3:2]=[#8X1+0] ATTR=k  INITIAL=612.0537081219 kcal/(A**2 mol)  FINAL=612.5316651180373 kcal/(A**2 mol)\n",
+      "Angles SMIRKS=[*:1]~[#7X2+0:2]~[*:3] ATTR=k  INITIAL=226.9001499199 kcal/(mol rad**2)  FINAL=43.02592344111929 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~[#6X4:2]-[*:3] ATTR=k  INITIAL=101.7373362367 kcal/(mol rad**2)  FINAL=25.96669771106467 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]~[*:3] ATTR=k  INITIAL=112.545110149 kcal/(mol rad**2)  FINAL=102.37502933364435 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~;!@[*;X3;r5:2]~;@[*;r5:3] ATTR=k  INITIAL=70.66802196994 kcal/(mol rad**2)  FINAL=-10.563753965169767 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~[#6X3:2]~[*:3] ATTR=k  INITIAL=153.5899485526 kcal/(mol rad**2)  FINAL=55.0845332421723 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[#1:1]-[#6X4:2]-[#1:3] ATTR=k  INITIAL=74.28701527177 kcal/(mol rad**2)  FINAL=3.668236436637386 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[#1:1]-[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]-[*:3] ATTR=k  INITIAL=77.52610202633 kcal/(mol rad**2)  FINAL=174.66015189439625 kcal/(mol rad**2)\n"
      ]
     }
    ],
