Refactor the objectives into PyTorch datasets

--- a/examples/energy-and-gradient.ipynb
+++ b/examples/energy-and-gradient.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Retrieving the QM training set\n",
+    "### Curating a QC training set\n",
     "\n",
     "For this example we will be training against QM energies which have been computed by and stored within the\n",
     "[QCArchive](https://qcarchive.molssi.org/), which are easily retrieved using the [OpenFF QCSubmit](https://github.com/openforcefield/openff-qcsubmit)\n",
@@ -133,16 +133,9 @@
     "You should see that our filtered collection contains the 6 results, which corresponds to 6 minimized conformers (and\n",
     "their associated energy computed using the OpenFF default B3LYP-D3BJ spec) for the molecule we filtered for above.\n",
     "\n",
-    "### Defining the objective ( / loss) function\n",
-    "\n",
-    "For this example we will be training our force field parameters against:\n",
-    "\n",
-    "* the relative energies between each conformer with the first conformer of the molecule\n",
-    "* the deviations between the QM and MM gradients projected along the redundant internal coordinates (RIC) of\n",
-    "  the molecule.\n",
-    "\n",
-    "The construction of such a loss function is made trivial using the built-in ``EnergyObjective`` class which can be\n",
-    "created directly from the collection of optimization results we retrieved above:\n",
+    "In order to be able to train our parameter against this data we need to wrap it in a PyTorch dataset object. This\n",
+    "is made trivial thanks to the built-in ``EnergyDataset`` object that ships with the framework. The energy dataset\n",
+    "will extract and store any energy, gradient, and hessian data in a format ready for evaluating a loss function.\n",
     "\n",
     "We first load in the initial force field parameters ($\\theta$) using the [OpenFF Toolkit](https://github.com/openforcefield/openff-toolkit):"
    ],
@@ -168,7 +161,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "which we can then use to construct our contribution objects:"
+    "which we can then use to construct our dataset:"
    ],
    "metadata": {
     "collapsed": false,
@@ -180,29 +173,28 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Pulling main optimisation records: 100%|██████████| 3/3 [00:00<00:00, 118.99it/s]\n",
+      "Pulling gradient / hessian data: 100%|██████████| 3/3 [00:00<00:00, 3734.91it/s]\n",
+      "Building energy contribution objects.:   0%|          | 0/1 [00:00<?, ?it/s]Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n",
+      "Building energy contribution objects.: 100%|██████████| 1/1 [00:04<00:00,  4.26s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "from descent import metrics, transforms\n",
-    "from descent.objectives.energy import EnergyObjective\n",
+    "from descent.data.energy import EnergyDataset\n",
     "\n",
-    "objective_contributions = EnergyObjective.from_optimization_results(\n",
+    "training_dataset = EnergyDataset.from_optimization_results(\n",
     "    result_collection,\n",
     "    initial_force_field,\n",
     "    # State that we want to include energies and gradients when computing\n",
     "    # the contribution to the loss function.\n",
     "    include_energies=True,\n",
     "    include_gradients=True,\n",
-    "    # Specify that we want use energies relative to the first conformer\n",
-    "    # when evaluating the loss function\n",
-    "    energy_transforms=transforms.relative(index=0),\n",
-    "    # Use the built-in MSE metric when comparing the MM and QM relative\n",
-    "    # energies.\n",
-    "    energy_metric=metrics.mse(),\n",
-    "    # For this example with will use the QM and MM gradients directly when\n",
-    "    # computing the loss function.\n",
-    "    gradient_transforms=transforms.identity(),\n",
-    "    # Use the built-in MSE metric when comparing the MM and QM gradients\n",
-    "    gradient_metric=metrics.mse(),\n",
     "    # State that we want to project the gradients along the RICs\n",
     "    gradient_coordinate_system=\"ric\"\n",
     ")"
@@ -217,8 +209,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The returned `objective_contributions` will contain one objective object per unique molecule in the\n",
-    "`result_collection`:"
+    "The returned `training_dataset` will contain one entry object per unique molecule in the `result_collection`:"
    ],
    "metadata": {
     "collapsed": false,
@@ -241,7 +232,7 @@
     }
    ],
    "source": [
-    "len(objective_contributions)"
+    "len(training_dataset)"
    ],
    "metadata": {
     "collapsed": false,
@@ -270,53 +261,29 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "parameter_delta_ids = sorted(\n",
-    "    {\n",
-    "        (handler_type, potential_key, attribute)\n",
-    "        for contribution in objective_contributions\n",
-    "        for handler_type, potential_key, attribute in contribution.parameter_ids\n",
-    "        if handler_type in [\"Bonds\", \"Angles\"] and attribute == \"k\"\n",
-    "    },\n",
-    "    key=lambda x: x[0],\n",
-    "    reverse=True\n",
-    ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "where here we have made use of the ``parameter_ids`` property that contains the unique identifiers of\n",
-    "the parameters that were assigned to the molecule referenced by the object."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "[('Bonds',\n  PotentialKey(id='[#6X3:1]-[#7X3:2]', mult=None, associated_handler='Bonds'),\n  'k'),\n ('Bonds',\n  PotentialKey(id='[#6X3:1]-[#7X2:2]', mult=None, associated_handler='Bonds'),\n  'k')]"
+      "text/plain": "[('Bonds',\n  PotentialKey(id='[#7:1]-[#1:2]', mult=None, associated_handler='Bonds'),\n  'k'),\n ('Bonds',\n  PotentialKey(id='[#6X3:1]=[#6X3:2]', mult=None, associated_handler='Bonds'),\n  'k')]"
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "parameter_delta_ids = sorted(\n",
+    "    {\n",
+    "        (handler_type, potential_key, attribute)\n",
+    "        for entry in training_dataset\n",
+    "        for (handler_type, _), (_, _, parameters) in entry.model_input.items()\n",
+    "        for potential_key, attributes in parameters\n",
+    "        for attribute in attributes\n",
+    "        if handler_type in [\"Bonds\", \"Angles\"] and attribute == \"k\"\n",
+    "    },\n",
+    "    key=lambda x: x[0],\n",
+    "    reverse=True\n",
+    ")\n",
     "parameter_delta_ids[:2]"
    ],
    "metadata": {
@@ -345,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "from descent.models.smirnoff import SMIRNOFFModel\n",
@@ -369,7 +336,13 @@
     "We are finally ready to begin training our force field parameters, or more precisely, the delta value that\n",
     "we should perturb the force field parameters by to reach better agreement with the training data.\n",
     "\n",
-    "Here we will use the 'boilerplate `pytorch` optimization loop':"
+    "For this example we will be training our force field parameters against:\n",
+    "\n",
+    "* the relative energies between each conformer with the first conformer of the molecule\n",
+    "* the deviations between the QM and MM gradients projected along the redundant internal coordinates (RIC) of\n",
+    "  the molecule.\n",
+    "\n",
+    "Here we define the 'boilerplate PyTorch optimization loop':"
    ],
    "metadata": {
     "collapsed": false,
@@ -380,27 +353,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: loss=541.970458984375\n",
-      "Epoch 20: loss=316.5990295410156\n",
-      "Epoch 40: loss=302.3933410644531\n",
-      "Epoch 60: loss=298.2558288574219\n",
-      "Epoch 80: loss=296.6781921386719\n",
-      "Epoch 100: loss=296.0563659667969\n",
-      "Epoch 120: loss=295.8383483886719\n",
-      "Epoch 140: loss=295.7755126953125\n",
-      "Epoch 160: loss=295.7544250488281\n",
-      "Epoch 180: loss=295.7417907714844\n"
+      "Epoch 0: loss=633.4320678710938\n",
+      "Epoch 20: loss=359.64111328125\n",
+      "Epoch 40: loss=340.6795959472656\n",
+      "Epoch 60: loss=334.7128601074219\n",
+      "Epoch 80: loss=332.68359375\n",
+      "Epoch 100: loss=332.10784912109375\n",
+      "Epoch 120: loss=331.9746398925781\n",
+      "Epoch 140: loss=331.9458923339844\n",
+      "Epoch 160: loss=331.9331359863281\n",
+      "Epoch 180: loss=331.9215087890625\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
+    "\n",
+    "from descent import metrics, transforms\n",
     "\n",
     "lr = 0.01\n",
     "n_epochs = 200\n",
@@ -409,11 +384,20 @@
     "\n",
     "for epoch in range(n_epochs):\n",
     "\n",
-    "    loss = torch.zeros(1)\n",
-    "\n",
-    "    for objective_contribution in objective_contributions:\n",
-    "        loss += objective_contribution(model)\n",
-    "\n",
+    "    loss = training_dataset.evaluate(\n",
+    "        model,\n",
+    "        # Specify that we want use energies relative to the first conformer\n",
+    "        # when evaluating the loss function\n",
+    "        energy_transforms=transforms.relative(index=0),\n",
+    "        # Use the built-in MSE metric when comparing the MM and QM relative\n",
+    "        # energies.\n",
+    "        energy_metric=metrics.mse(),\n",
+    "        # For this example with will use the QM and MM gradients directly when\n",
+    "        # computing the loss function.\n",
+    "        gradient_transforms=transforms.identity(),\n",
+    "        # Use the built-in MSE metric when comparing the MM and QM gradients\n",
+    "        gradient_metric=metrics.mse(),\n",
+    "    )\n",
     "    loss.backward()\n",
     "\n",
     "    optimizer.step()\n",
@@ -432,8 +416,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "where the only code of note is the loop over our objective contributions which get added to the total\n",
-    "loss function.\n",
+    "where the only code of note is the ``training_dataset.evaluate`` function that will evaluate the loss function for us.\n",
+    "This function accepts a number of arguments, but most notable are those that control exactly how the data is transformed\n",
+    "(i.e. computed relative energies) and what form the loss function should take.\n",
     "\n",
     "We can save our trained parameters back to a SMIRNOFF `.offxml` file for future use:"
    ],
@@ -446,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "final_force_field = model.to_force_field()\n",
@@ -473,32 +458,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bonds SMIRKS=[#6X3:1]-[#7X3:2] ATTR=k  INITIAL=719.219372554 kcal/(A**2 mol)  FINAL=718.7519367748752 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]-[#7X2:2] ATTR=k  INITIAL=837.2647972972 kcal/(A**2 mol)  FINAL=837.5914970507644 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#7:1]-[#1:2] ATTR=k  INITIAL=997.7547006218 kcal/(A**2 mol)  FINAL=997.2765223590894 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#7X3:2]-[#6X3]=[#8X1+0] ATTR=k  INITIAL=764.7120801727 kcal/(A**2 mol)  FINAL=765.1674806286782 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#1:2] ATTR=k  INITIAL=758.0931772913 kcal/(A**2 mol)  FINAL=757.615259442764 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#6X3:2] ATTR=k  INITIAL=612.5097961064 kcal/(A**2 mol)  FINAL=612.0317997062361 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]=[#7X2,#7X3+1:2] ATTR=k  INITIAL=882.4191878243 kcal/(A**2 mol)  FINAL=881.9175979853932 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6:1]=[#8X1+0,#8X2+1:2] ATTR=k  INITIAL=1135.595318618 kcal/(A**2 mol)  FINAL=1135.1173281441104 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1](=[#8X1+0])-[#7X3:2] ATTR=k  INITIAL=1053.970761594 kcal/(A**2 mol)  FINAL=1053.4928565952225 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6:1]-[#7:2] ATTR=k  INITIAL=719.6326854584 kcal/(A**2 mol)  FINAL=719.1547123359583 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]-[#1:2] ATTR=k  INITIAL=808.1394472833 kcal/(A**2 mol)  FINAL=807.6614951877358 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]=[#6X3:2] ATTR=k  INITIAL=857.1115548611 kcal/(A**2 mol)  FINAL=856.6519474625673 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#6X3:2]=[#8X1+0] ATTR=k  INITIAL=612.0537081219 kcal/(A**2 mol)  FINAL=612.5316651180373 kcal/(A**2 mol)\n",
-      "Angles SMIRKS=[*:1]~[#7X2+0:2]~[*:3] ATTR=k  INITIAL=226.9001499199 kcal/(mol rad**2)  FINAL=43.02592344111929 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~[#6X4:2]-[*:3] ATTR=k  INITIAL=101.7373362367 kcal/(mol rad**2)  FINAL=25.96669771106467 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]~[*:3] ATTR=k  INITIAL=112.545110149 kcal/(mol rad**2)  FINAL=102.37502933364435 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~;!@[*;X3;r5:2]~;@[*;r5:3] ATTR=k  INITIAL=70.66802196994 kcal/(mol rad**2)  FINAL=-10.563753965169767 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~[#6X3:2]~[*:3] ATTR=k  INITIAL=153.5899485526 kcal/(mol rad**2)  FINAL=55.0845332421723 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[#1:1]-[#6X4:2]-[#1:3] ATTR=k  INITIAL=74.28701527177 kcal/(mol rad**2)  FINAL=3.668236436637386 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[#1:1]-[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]-[*:3] ATTR=k  INITIAL=77.52610202633 kcal/(mol rad**2)  FINAL=174.66015189439625 kcal/(mol rad**2)\n"
+      "Bonds SMIRKS=[#7:1]-[#1:2] ATTR=k  INITIAL=997.7547006218 kcal/(A**2 mol)  FINAL=997.2764430951689 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]=[#6X3:2] ATTR=k  INITIAL=857.1115548611 kcal/(A**2 mol)  FINAL=856.6721658595291 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]-[#7X2:2] ATTR=k  INITIAL=837.2647972972 kcal/(A**2 mol)  FINAL=837.6406442714525 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#1:2] ATTR=k  INITIAL=758.0931772913 kcal/(A**2 mol)  FINAL=757.6152659958559 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6:1]=[#8X1+0,#8X2+1:2] ATTR=k  INITIAL=1135.595318618 kcal/(A**2 mol)  FINAL=1135.1173284290276 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#6X3:2] ATTR=k  INITIAL=612.5097961064 kcal/(A**2 mol)  FINAL=612.0317954609721 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]-[#7X3:2] ATTR=k  INITIAL=719.219372554 kcal/(A**2 mol)  FINAL=718.7531744829888 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#7X3:2]-[#6X3]=[#8X1+0] ATTR=k  INITIAL=764.7120801727 kcal/(A**2 mol)  FINAL=765.1886159741499 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]-[#1:2] ATTR=k  INITIAL=808.1394472833 kcal/(A**2 mol)  FINAL=807.6614935637086 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1]=[#7X2,#7X3+1:2] ATTR=k  INITIAL=882.4191878243 kcal/(A**2 mol)  FINAL=881.9268301522415 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X3:1](=[#8X1+0])-[#7X3:2] ATTR=k  INITIAL=1053.970761594 kcal/(A**2 mol)  FINAL=1053.4928622650716 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6:1]-[#7:2] ATTR=k  INITIAL=719.6326854584 kcal/(A**2 mol)  FINAL=719.1547107689146 kcal/(A**2 mol)\n",
+      "Bonds SMIRKS=[#6X4:1]-[#6X3:2]=[#8X1+0] ATTR=k  INITIAL=612.0537081219 kcal/(A**2 mol)  FINAL=612.531637709018 kcal/(A**2 mol)\n",
+      "Angles SMIRKS=[#1:1]-[#6X4:2]-[#1:3] ATTR=k  INITIAL=74.28701527177 kcal/(mol rad**2)  FINAL=3.156618157298837 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]~[*:3] ATTR=k  INITIAL=112.545110149 kcal/(mol rad**2)  FINAL=94.1024970424084 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~[#7X2+0:2]~[*:3] ATTR=k  INITIAL=226.9001499199 kcal/(mol rad**2)  FINAL=31.499088021470783 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~[#6X3:2]~[*:3] ATTR=k  INITIAL=153.5899485526 kcal/(mol rad**2)  FINAL=40.37185554971532 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~[#6X4:2]-[*:3] ATTR=k  INITIAL=101.7373362367 kcal/(mol rad**2)  FINAL=26.406389308094433 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[#1:1]-[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]-[*:3] ATTR=k  INITIAL=77.52610202633 kcal/(mol rad**2)  FINAL=191.91446506590137 kcal/(mol rad**2)\n",
+      "Angles SMIRKS=[*:1]~;!@[*;X3;r5:2]~;@[*;r5:3] ATTR=k  INITIAL=70.66802196994 kcal/(mol rad**2)  FINAL=7.836212593216928 kcal/(mol rad**2)\n"
      ]
     }
    ],
