Add function to summarize SMIRNOFF model

--- a/examples/energy-and-gradient.ipynb
+++ b/examples/energy-and-gradient.ipynb
@@ -178,10 +178,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pulling main optimisation records: 100%|██████████| 3/3 [00:00<00:00, 182.09it/s]\n",
-      "Pulling gradient / hessian data: 100%|██████████| 3/3 [00:00<00:00, 2606.78it/s]\n",
+      "Pulling main optimisation records: 100%|██████████| 3/3 [00:00<00:00, 199.60it/s]\n",
+      "Pulling gradient / hessian data: 100%|██████████| 3/3 [00:00<00:00, 2074.33it/s]\n",
       "Building entries.:   0%|          | 0/1 [00:00<?, ?it/s]Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n",
-      "Building entries.: 100%|██████████| 1/1 [00:03<00:00,  3.35s/it]\n"
+      "Building entries.: 100%|██████████| 1/1 [00:03<00:00,  3.52s/it]\n"
      ]
     }
    ],
@@ -264,7 +264,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[('Bonds',\n  PotentialKey(id='[#6X3:1]=[#7X2,#7X3+1:2]', mult=None, associated_handler='Bonds'),\n  'k'),\n ('Bonds',\n  PotentialKey(id='[#7:1]-[#1:2]', mult=None, associated_handler='Bonds'),\n  'k')]"
+      "text/plain": "[('Bonds',\n  PotentialKey(id='[#6X3:1]=[#6X3:2]', mult=None, associated_handler='Bonds'),\n  'k'),\n ('Bonds',\n  PotentialKey(id='[#6X3:1]-[#1:2]', mult=None, associated_handler='Bonds'),\n  'k')]"
      },
      "execution_count": 7,
      "metadata": {},
@@ -361,14 +361,14 @@
      "text": [
       "Epoch 0: loss=633.4320678710938\n",
       "Epoch 20: loss=359.64111328125\n",
-      "Epoch 40: loss=340.67962646484375\n",
-      "Epoch 60: loss=334.7128601074219\n",
-      "Epoch 80: loss=332.68365478515625\n",
+      "Epoch 40: loss=340.6795349121094\n",
+      "Epoch 60: loss=334.71282958984375\n",
+      "Epoch 80: loss=332.6836242675781\n",
       "Epoch 100: loss=332.1078796386719\n",
-      "Epoch 120: loss=331.9747009277344\n",
+      "Epoch 120: loss=331.97467041015625\n",
       "Epoch 140: loss=331.9459533691406\n",
-      "Epoch 160: loss=331.9331359863281\n",
-      "Epoch 180: loss=331.92156982421875\n"
+      "Epoch 160: loss=331.9331970214844\n",
+      "Epoch 180: loss=331.9215393066406\n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "or print out the initial and final values."
+    "or print out a summary of the trained values"
    ],
    "metadata": {
     "collapsed": false,
@@ -469,47 +469,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bonds SMIRKS=[#6X3:1]=[#7X2,#7X3+1:2] ATTR=k  INITIAL=882.4191878243 kcal/(A**2 mol)  FINAL=881.926830095258 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#7:1]-[#1:2] ATTR=k  INITIAL=997.7547006218 kcal/(A**2 mol)  FINAL=997.2764430951689 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]=[#6X3:2] ATTR=k  INITIAL=857.1115548611 kcal/(A**2 mol)  FINAL=856.6721659734958 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#6X3:2]=[#8X1+0] ATTR=k  INITIAL=612.0537081219 kcal/(A**2 mol)  FINAL=612.5316377660014 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#6X3:2] ATTR=k  INITIAL=612.5097961064 kcal/(A**2 mol)  FINAL=612.0317954609721 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6:1]=[#8X1+0,#8X2+1:2] ATTR=k  INITIAL=1135.595318618 kcal/(A**2 mol)  FINAL=1135.1173284290276 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]-[#7X3:2] ATTR=k  INITIAL=719.219372554 kcal/(A**2 mol)  FINAL=718.7531744829888 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]-[#1:2] ATTR=k  INITIAL=808.1394472833 kcal/(A**2 mol)  FINAL=807.661493535217 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1]-[#7X2:2] ATTR=k  INITIAL=837.2647972972 kcal/(A**2 mol)  FINAL=837.640644214469 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6:1]-[#7:2] ATTR=k  INITIAL=719.6326854584 kcal/(A**2 mol)  FINAL=719.1547107119311 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#7X3:2]-[#6X3]=[#8X1+0] ATTR=k  INITIAL=764.7120801727 kcal/(A**2 mol)  FINAL=765.1886159741499 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X3:1](=[#8X1+0])-[#7X3:2] ATTR=k  INITIAL=1053.970761594 kcal/(A**2 mol)  FINAL=1053.4928622935631 kcal/(A**2 mol)\n",
-      "Bonds SMIRKS=[#6X4:1]-[#1:2] ATTR=k  INITIAL=758.0931772913 kcal/(A**2 mol)  FINAL=757.6152659958559 kcal/(A**2 mol)\n",
-      "Angles SMIRKS=[#1:1]-[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]-[*:3] ATTR=k  INITIAL=77.52610202633 kcal/(mol rad**2)  FINAL=191.91446506590137 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[#1:1]-[#6X4:2]-[#1:3] ATTR=k  INITIAL=74.28701527177 kcal/(mol rad**2)  FINAL=3.1566064657054795 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~[#7X2+0:2]~[*:3] ATTR=k  INITIAL=226.9001499199 kcal/(mol rad**2)  FINAL=31.499088021470783 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~[#6X4:2]-[*:3] ATTR=k  INITIAL=101.7373362367 kcal/(mol rad**2)  FINAL=26.406365924907732 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~[#7X3$(*~[#6X3,#6X2,#7X2+0]):2]~[*:3] ATTR=k  INITIAL=112.545110149 kcal/(mol rad**2)  FINAL=94.10249558095923 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~;!@[*;X3;r5:2]~;@[*;r5:3] ATTR=k  INITIAL=70.66802196994 kcal/(mol rad**2)  FINAL=7.836206747420249 kcal/(mol rad**2)\n",
-      "Angles SMIRKS=[*:1]~[#6X3:2]~[*:3] ATTR=k  INITIAL=153.5899485526 kcal/(mol rad**2)  FINAL=40.37185554971532 kcal/(mol rad**2)\n"
+      "\n",
+      "=====================================Bonds======================================\n",
+      "\n",
+      "---   -------------------\n",
+      "        k (kcal/mol/Å²)  \n",
+      "       INITIAL    FINAL  \n",
+      "---   -------------------\n",
+      "b10   1053.9708 1053.4929\n",
+      "b11   837.2648  837.6406 \n",
+      "b13   882.4192  881.9268 \n",
+      "b2    612.5098  612.0318 \n",
+      "b20   1135.5953 1135.1173\n",
+      "b3    612.0537  612.5316 \n",
+      "b6    857.1116  856.6722 \n",
+      "b7    719.6327  719.1547 \n",
+      "b8    719.2194  718.7532 \n",
+      "b83   758.0932  757.6153 \n",
+      "b84   808.1394  807.6615 \n",
+      "b86   997.7547  997.2764 \n",
+      "b9    764.7121  765.1886 \n",
+      "\n",
+      "=====================================Angles=====================================\n",
+      "\n",
+      "---   -----------------\n",
+      "      k (kcal/mol/rad²)\n",
+      "      INITIAL   FINAL  \n",
+      "---   -----------------\n",
+      "a1    101.7373 26.4064 \n",
+      "a10   153.5899 40.3719 \n",
+      "a14   70.6680  7.8362  \n",
+      "a19   112.5451 94.1025 \n",
+      "a2    74.2870  3.1566  \n",
+      "a20   77.5261  191.9145\n",
+      "a22   226.9001 31.4991 \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for parameter_handler, potential_key, attribute in parameter_delta_ids:\n",
-    "\n",
-    "    initial_value = getattr(\n",
-    "        initial_force_field[parameter_handler].parameters[potential_key.id], attribute\n",
-    "    )\n",
-    "    final_value = getattr(\n",
-    "        final_force_field[parameter_handler].parameters[potential_key.id], attribute\n",
-    "    )\n",
-    "\n",
-    "    print(\n",
-    "        f\"{parameter_handler} SMIRKS={potential_key.id} ATTR={attribute}  INITIAL={initial_value}  FINAL={final_value}\"\n",
-    "    )"
+    "model.summarise(parameter_id_type=\"id\");"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "where here we have chosen to print the unique ID associated with each parameter as opposed to the SMIRKS pattern\n",
+    "(i.e `parameter_id_type=\"smirks\"`) for improved clarity."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
