Add utility to find SMIRNOFF parameters exercised by dataset

--- a/examples/energy-and-gradient.ipynb
+++ b/examples/energy-and-gradient.ipynb
@@ -178,10 +178,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pulling main optimisation records: 100%|██████████| 3/3 [00:00<00:00, 199.60it/s]\n",
-      "Pulling gradient / hessian data: 100%|██████████| 3/3 [00:00<00:00, 2074.33it/s]\n",
+      "Pulling main optimisation records: 100%|██████████| 3/3 [00:00<00:00, 183.13it/s]\n",
+      "Pulling gradient / hessian data: 100%|██████████| 3/3 [00:00<00:00, 3483.64it/s]\n",
       "Building entries.:   0%|          | 0/1 [00:00<?, ?it/s]Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n",
-      "Building entries.: 100%|██████████| 1/1 [00:03<00:00,  3.52s/it]\n"
+      "Building entries.: 100%|██████████| 1/1 [00:03<00:00,  3.44s/it]\n"
      ]
     }
    ],
@@ -249,7 +249,8 @@
     "\n",
     "### Defining the 'model'\n",
     "\n",
-    "For this example we will train all the bond and force constants that were assigned to our molecule of interest:"
+    "For this example we will train all the bond and angle force constants that will be assigned to the molecules in our\n",
+    "training set:"
    ],
    "metadata": {
     "collapsed": false,
@@ -264,7 +265,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[('Bonds',\n  PotentialKey(id='[#6X3:1]=[#6X3:2]', mult=None, associated_handler='Bonds'),\n  'k'),\n ('Bonds',\n  PotentialKey(id='[#6X3:1]-[#1:2]', mult=None, associated_handler='Bonds'),\n  'k')]"
+      "text/plain": "[('Angles',\n  PotentialKey(id='[#1:1]-[#6X4:2]-[#1:3]', mult=None, associated_handler='Angles'),\n  'k'),\n ('Angles',\n  PotentialKey(id='[*:1]~[#7X2+0:2]~[*:3]', mult=None, associated_handler='Angles'),\n  'k'),\n ('Bonds',\n  PotentialKey(id='[#6X3:1]-[#1:2]', mult=None, associated_handler='Bonds'),\n  'k'),\n ('Bonds',\n  PotentialKey(id='[#6X4:1]-[#1:2]', mult=None, associated_handler='Bonds'),\n  'k')]"
      },
      "execution_count": 7,
      "metadata": {},
@@ -272,19 +273,14 @@
     }
    ],
    "source": [
-    "parameter_delta_ids = sorted(\n",
-    "    {\n",
-    "        (handler_type, potential_key, attribute)\n",
-    "        for entry in training_dataset\n",
-    "        for (handler_type, _), (_, _, parameters) in entry.model_input.items()\n",
-    "        for potential_key, attributes in parameters\n",
-    "        for attribute in attributes\n",
-    "        if handler_type in [\"Bonds\", \"Angles\"] and attribute == \"k\"\n",
-    "    },\n",
-    "    key=lambda x: x[0],\n",
-    "    reverse=True\n",
+    "from descent.utilities.smirnoff import exercised_parameters\n",
+    "\n",
+    "parameter_delta_ids = exercised_parameters(\n",
+    "    training_dataset,\n",
+    "    handlers_to_include=[\"Bonds\", \"Angles\"],\n",
+    "    attributes_to_include=[\"k\"]\n",
     ")\n",
-    "parameter_delta_ids[:2]"
+    "parameter_delta_ids[::5]"
    ],
    "metadata": {
     "collapsed": false,
@@ -360,14 +356,14 @@
      "output_type": "stream",
      "text": [
       "Epoch 0: loss=633.4320678710938\n",
-      "Epoch 20: loss=359.64111328125\n",
-      "Epoch 40: loss=340.6795349121094\n",
+      "Epoch 20: loss=359.6411437988281\n",
+      "Epoch 40: loss=340.6795654296875\n",
       "Epoch 60: loss=334.71282958984375\n",
-      "Epoch 80: loss=332.6836242675781\n",
-      "Epoch 100: loss=332.1078796386719\n",
-      "Epoch 120: loss=331.97467041015625\n",
-      "Epoch 140: loss=331.9459533691406\n",
-      "Epoch 160: loss=331.9331970214844\n",
+      "Epoch 80: loss=332.68365478515625\n",
+      "Epoch 100: loss=332.10784912109375\n",
+      "Epoch 120: loss=331.9746398925781\n",
+      "Epoch 140: loss=331.9459228515625\n",
+      "Epoch 160: loss=331.9331359863281\n",
       "Epoch 180: loss=331.9215393066406\n"
      ]
     }
@@ -470,6 +466,20 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "=====================================Angles=====================================\n",
+      "\n",
+      "---   -----------------\n",
+      "      k (kcal/mol/rad²)\n",
+      "      INITIAL   FINAL  \n",
+      "---   -----------------\n",
+      "a1    101.7373 26.4063 \n",
+      "a10   153.5899 40.3719 \n",
+      "a14   70.6680  7.8362  \n",
+      "a19   112.5451 94.1025 \n",
+      "a2    74.2870  3.1566  \n",
+      "a20   77.5261  191.9145\n",
+      "a22   226.9001 31.4991 \n",
+      "\n",
       "=====================================Bonds======================================\n",
       "\n",
       "---   -------------------\n",
@@ -489,20 +499,6 @@
       "b84   808.1394  807.6615 \n",
       "b86   997.7547  997.2764 \n",
       "b9    764.7121  765.1886 \n",
-      "\n",
-      "=====================================Angles=====================================\n",
-      "\n",
-      "---   -----------------\n",
-      "      k (kcal/mol/rad²)\n",
-      "      INITIAL   FINAL  \n",
-      "---   -----------------\n",
-      "a1    101.7373 26.4064 \n",
-      "a10   153.5899 40.3719 \n",
-      "a14   70.6680  7.8362  \n",
-      "a19   112.5451 94.1025 \n",
-      "a2    74.2870  3.1566  \n",
-      "a20   77.5261  191.9145\n",
-      "a22   226.9001 31.4991 \n",
       "\n"
      ]
     }
